Added endpoint to use join link without textSetId...
